# Nomina

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nomina.example.toml  picons.example.toml
.github/workflows/: ci.yml
deploy/: nomina.service
docs/: api-contract.md  dhcp-testing.md  dyndns-clients.md
examples/: dnssec_verify.rs  doq_query.rs
migrations/0001_init/: down.sql  up.sql
migrations/0002_geo_views/: down.sql  up.sql
migrations/0003_dhcp/: down.sql  up.sql
migrations/0004_dhcp_server_id/: down.sql  up.sql
migrations/0005_dhcp_interface/: down.sql  up.sql
migrations/0006_audit_log/: up.sql
scripts/: dhcp_probe.py
src/: config.rs  db.rs  error.rs  filter.rs  geo.rs  main.rs  models.rs  net.rs  privileges.rs  schema.rs  state.rs  stats.rs  store.rs  tls.rs
src/dhcp/: lease.rs  mod.rs  options.rs  server.rs  v4.rs  v6.rs
src/dns/: axfr.rs  cache.rs  conditional.rs  dnssec.rs  doh.rs  forwarder.rs  handler.rs  homograph.rs  mdns.rs  mod.rs  resolve.rs  secondary.rs  server.rs  tsig.rs  upstream.rs
src/web/: api.rs  auth.rs  dyndns.rs  fetch.rs  mod.rs
web/: README.md  api.js  app.js  index.html  styles.css  ui.js
web/views/: account.js  audit.js  auth.js  blocklists.js  conditional.js  dashboard.js  dhcp.js  dyndns.js  map.js  mdns.js  queries.js  query-actions.js  rewrites.js  rules.js  secondary.js  settings.js  views.js  zone-detail.js  zones.js
