[package]
name = "nomina"
version = "0.2.0"
edition = "2024"
description = "A secure, split-horizon authoritative + forwarding DNS server for homelabs, with a web UI and API. Single self-contained binary."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DatanoiseTV/Nomina"
readme = "README.md"
rust-version = "1.85"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
data-encoding = "2"
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"
futures-util = "0.3"
hickory-proto = { version = "0.26", features = ["dnssec-ring", "mdns"] }
hickory-resolver = { version = "0.26", features = ["tokio", "system-config", "tls-ring", "https-ring", "recursor", "dnssec-ring"] }
hickory-server = { version = "0.26", features = ["tls-ring", "https-ring", "quic-ring", "h3-ring"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
maxminddb = "0.28"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
idna = "1"
ipnet = { version = "2", features = ["serde"] }
libc = "0.2"
# Bundle SQLite so the single binary has no system-sqlite dependency. Version
# pinned to match diesel 2's libsqlite3-sys requirement (one resolved version).
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
nix = { version = "0.29", default-features = false, features = ["user", "net"] }
parking_lot = "0.12"
rand = "0.8"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "http2"] }
rust-embed = { version = "8", features = ["mime-guess"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = { version = "0.5", features = ["all"] }
subtle = "2"
thiserror = "2"
time = { version = "=0.3.41", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["set-header", "trace", "compression-gzip", "limit"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-script = "0.5"
rustls-acme = { version = "0.15.3", default-features = false, features = ["ring", "tokio", "webpki-roots"] }
tokio-util = { version = "0.7.18", features = ["compat"] }

# Release profile: optimize for size + speed, but keep unwinding panics.
# Nomina parses untrusted DNS bytes via hickory; `panic = "abort"` would let a
# single malformed packet take down the whole process and would neuter tokio's
# per-task panic isolation. Keep the default unwind behaviour.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "unwind"

[dev-dependencies]
quinn = { version = "0.11", features = ["ring"] }
